--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,6 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: bun install
+        run: bun install --frozen-lockfile
       - name: Test build website
         run: bun run build
