--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@docusaurus/core": "3.4.0",
     "@docusaurus/preset-classic": "3.4.0",
     "@mdx-js/react": "^3.0.1",
-    "caniuse-lite": "^1.0.30001641",
     "clsx": "^2.1.1",
     "nvm": "^0.0.4",
     "prism-react-renderer": "^2.3.1",
@@ -28,7 +27,8 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
     "@docusaurus/tsconfig": "3.4.0",
-    "typescript": "~5.2.2"
+    "typescript": "5.2.2",
+    "caniuse-lite": "^1.0.30001641"
   },
   "browserslist": {
     "production": [
