--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -14,11 +14,13 @@ concurrency: preview-${{ github.ref }}
 jobs:
   deploy-preview:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - uses: oven-sh/setup-bun@v2
-
+      # this has to match docusaurus's baseURL in docusaurus.config.js
+      - run: echo "GH_ACTION_DOCUSAURUS_BASE_URL=pr-preview/pr-${{ github.event.number }}" >> "$GITHUB_ENV"
       - name: Install and Build
         if: github.event.action != 'closed' # You might want to skip the build if the PR has been closed
         run: |
