--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -9,6 +9,10 @@ on:
       - synchronize
       - closed
 
+permissions:
+  issues: write
+  pull-requests: write
+
 concurrency: preview-${{ github.ref }}
 
 jobs:
