try to remove previews on every PR sync

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -30,6 +30,12 @@ jobs:
           bun install --frozen-lockfile
           bun run build
 
+      - name: Always clean
+        uses: rossjrw/pr-preview-action@v1
+        with:
+          source-dir: ./build
+          action: remove
+
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
         with:
