--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -24,20 +24,13 @@ jobs:
       - uses: oven-sh/setup-bun@v2
       # this has to match docusaurus's baseURL in docusaurus.config.js
       - run: echo "GH_ACTION_DOCUSAURUS_BASE_URL=pr-preview/pr-${{ github.event.number }}" >> "$GITHUB_ENV"
-
-      # - name: Always clean
-      #   uses: rossjrw/pr-preview-action@v1
-      #   with:
-      #     source-dir: ./build
-      #     action: remove
+      - run: rm -rf ./build
 
       - name: Install and Build
         if: github.event.action != 'closed' # You might want to skip the build if the PR has been closed
         run: |
           bun install --frozen-lockfile
           bun run build
-
-
 
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1.4.7
