--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,16 +3,19 @@ name: Test deployment
 on:
   push:
     branches: ["*"]
-  pull_request:
-    types:
-      - opened
-      - synchronize
-    branches:
-      - "main**"
+  # note: not testing on PR, since we are already previews for PRs
+  # which have the same effect
+  # pull_request:
+  #   types:
+  #     - opened
+  #     - synchronize
+  #   branches:
+  #     - "main**"
 
 jobs:
   test-deploy:
     name: Test deployment
+    if: (github.event_name != 'pull_request')
     runs-on: ubuntu-latest
     steps:
       # NOTE: for debugging CI this allow shell access to github runner. Will print out tmate.io terminal url
