test remove concurrency

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -9,7 +9,7 @@ on:
       - synchronize
       - closed
 
-concurrency: preview-${{ github.ref }}
+# concurrency: preview-${{ github.ref }}
 
 jobs:
   deploy-preview:
