--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,7 @@ on:
 jobs:
   test-deploy:
     name: Test deployment
-    if: (github.event_name != 'pull_request')
+    if: ${{github.event_name != 'pull_request'}}
     runs-on: ubuntu-latest
     steps:
       # NOTE: for debugging CI this allow shell access to github runner. Will print out tmate.io terminal url
