--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,18 +1,19 @@
 # .github/workflows/preview.yml
-name: Deploy PR previews Two
+name: Deploy PR previews
 
 on:
   pull_request:
     types:
-      # - opened
-      # - reopened
+      - opened
+      - reopened
       - synchronize
-      # - closed
-
-# concurrency: preview-${{ github.ref }}
+      - closed
 
 jobs:
   deploy-preview:
+    concurrency:
+      group: preview-${{ github.ref }}
+      cancel-in-progress: true
     permissions:
       contents: write
       pull-requests: write
