--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -2,17 +2,18 @@
 name: Deploy PR previews
 
 on:
-  pull_request_target:
+  pull_request:
     types:
       - opened
       - reopened
       - synchronize
       - closed
 
-concurrency: preview-${{ github.ref }}
-
 jobs:
   deploy-preview:
+    concurrency:
+      group: preview-${{ github.ref }}
+      cancel-in-progress: true
     permissions:
       contents: write
       pull-requests: write
@@ -25,6 +26,8 @@ jobs:
       # this has to match docusaurus's baseURL in docusaurus.config.js
       - run: echo "GH_ACTION_DOCUSAURUS_BASE_URL=pr-preview/pr-${{ github.event.number }}" >> "$GITHUB_ENV"
 
+      - name: Echo
+        run: echo preview-${{ github.ref }}
       - name: Install and Build
         if: github.event.action != 'closed' # You might want to skip the build if the PR has been closed
         run: |
