--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,12 +3,14 @@ name: Test deployment
 on:
   push:
     branches: ["*"]
-  pull_request:
-    types:
-      - opened
-      - synchronize
-    branches:
-      - "main**"
+  # note: not testing on PR, since we are already previews for PRs
+  # which have the same effect
+  # pull_request:
+  #   types:
+  #     - opened
+  #     - synchronize
+  #   branches:
+  #     - "main**"
 
 jobs:
   test-deploy:
