--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "nvm": "^0.0.4",
     "prism-react-renderer": "^2.4.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "update-browserslist-db": "^1.1.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.7.0",
     "@docusaurus/tsconfig": "^3.7.0",
-    "caniuse-lite": "^1.0.30001698",
+    "caniuse-lite": "latest",
     "typescript": "5.2.2"
   },
   "browserslist": {
@@ -42,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": ">=18.0"
   }
 }
