--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,8 +3,6 @@ name: Test deployment
 on:
   push:
     branches: ["*"]
-  # note: not testing on PR, since we are already previews for PRs
-  # which have the same effect
   pull_request:
     types:
       - opened
@@ -17,18 +15,12 @@ jobs:
     name: Test deployment
     runs-on: ubuntu-latest
     steps:
-      # NOTE: for debugging CI this allow shell access to github runner. Will print out tmate.io terminal url
-      # - name: Setup tmate session
-      #   uses: mxschmitt/action-tmate@v3
-      #   with:
-      #     detached: true
-      #   timeout-minutes: 15
-      - uses: actions/checkout@v3
-      - uses: oven-sh/setup-bun@v2
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
         with:
-          node-version: 18
-
+          fetch-depth: 0
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
       - name: Install dependencies
         run: bun install --frozen-lockfile
       - name: Test build website
